--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "redux-promise-middleware": "^3.2.0",
     "redux-thunk": "^2.1.0",
     "semantic-ui-react": "^0.87.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1"
   },
   "scripts": {
@@ -69,6 +67,8 @@
     "jest-enzyme": "^7.0.2",
     "react-test-renderer": "^16.8.6",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   }
 }
